feat: upgrade storage to SQLite and add setup wizard v2.1.8

--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,14 @@ node_modules
 .env.production.local
 
 
-# JSON Data (Ignored to prevent conflicts and data overwrites)
+# JSON Data & DB (Ignored to prevent conflicts and data overwrites)
 shops.json
 orders.json
 buyers.json
 settings.json
 payment_pages.json
+*.json.bak
+paystream.db
+paystream.db-journal
+waiters.json
+ip_logs.json
